# aoc_2023

01/: CMakeLists.txt  build.sh  main.cpp
02/: CMakeLists.txt  main.cpp
